added structure a bank management registration form

--- a/view/lab_task2/view/lab2.html
+++ b/view/lab_task2/view/lab2.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lab2</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <center>
+        <h2 class="bank-title">Bank Management System</h2>
+        <p class="details">Your Trusted Financial Partner</p>
+    </center>
+    <h2>Customer Registration Form</h2>
+
+    <table>
+        <tr>
+            <td>Full Name:</td>
+            <td><input type="text" name="" id=""></td>
+        </tr>
+        <tr>
+            <td>Date of Birth:</td>
+            <td><input type="date" name="" id=""></td>
+        </tr>
+        <tr>
+            <td>Gender:</td>
+            <td><input type="radio" name="des">Male
+                <input type="radio" name="des">Female
+                <input type="radio" name="des">Other
+            </td>
+        </tr>
+        <tr>
+            <td>Material Status:</td>
+            <td><select name="" id="">
+                    <option value="">Single</option>
+                    <option value="">Married</option>
+                </select></td>
+        </tr>
+        <tr>
+            <td>Account Type:</td>
+            <td><select name="" id="">
+                    <option value="">Savings</option>
+                    <option value="">Joint</option>
+                    <option value="">Fixed Deposit</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td>Initial Deposit Amount:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Mobile Number:</td>
+            <td><input type="number"></td>
+        </tr>
+        <tr>
+            <td>Email Address:</td>
+            <td><input type="email"></td>
+        </tr>
+        <tr>
+            <td>Address:</td>
+            <td><textarea name="" id="" cols="30" rows="3"></textarea></td>
+        </tr>
+        <tr>
+            <td>Occupation:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>National ID:(NID)</td>
+            <td><input type="number"></td>
+        </tr>
+        <tr>
+            <td>Set Password:</td>
+            <td><input type="password"></td>
+        </tr>
+        <tr>
+            <td>Upload ID Proof:</td>
+            <td><input type="file"></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox"> I agree to the terms and conditions</td>
+        </tr>
+        <tr>
+            <td>
+                <div>
+                    <button>Register</button>
+                    <input type="reset" value="Clear">
+                </div>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
