--- a/view/lab_task2/view/lab2.html
+++ b/view/lab_task2/view/lab2.html
@@ -15,8 +15,8 @@
     </center>
     <h2>Customer Registration Form</h2>
 
-    <table>
-        <tr>
+    <table class="table">
+        <tr class="tr">
             <td>Full Name:</td>
             <td><input type="text" name="" id=""></td>
         </tr>
@@ -91,6 +91,10 @@
             </td>
         </tr>
     </table>
+
+    <div class="div">
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus sed rem cum incidunt aperiam. Quia eaque est nemo, temporibus culpa dolores repudiandae qui officiis facilis, expedita minima aut ducimus, harum cumque quae? Earum ad laudantium, commodi quisquam consequuntur reiciendis maxime facilis! Excepturi harum repellat reiciendis facilis iusto minima, quibusdam suscipit eius magni neque exercitationem ab adipisci saepe animi ipsa asperiores molestias non aspernatur assumenda eaque nihil? A explicabo suscipit sunt quae perspiciatis impedit vitae modi eligendi soluta facilis! Iusto consequuntur delectus, exercitationem, porro eligendi ex nihil itaque ratione qui at totam rem, cupiditate vero animi repudiandae mollitia facere perferendis debitis?
+    </div>
 </body>
 
 </html>
