added button style

--- a/view/lab_task2/view/lab2.html
+++ b/view/lab_task2/view/lab2.html
@@ -84,9 +84,9 @@
         </tr>
         <tr>
             <td>
-                <div>
-                    <button>Register</button>
-                    <input type="reset" value="Clear">
+                <div class="button-div">
+                    <button class="button">Register</button>
+                    <input class="button" type="reset" value="Clear">
                 </div>
             </td>
         </tr>
