--- a/view/lab_task2/view/style.css
+++ b/view/lab_task2/view/style.css
@@ -13,3 +13,15 @@
     width: 400px;
     overflow-y: scroll;
 }
+.button{
+    background-color: blue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+}
+.button-div{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
