--- a/view/mid_la_task3/css/task3_style.css
+++ b/view/mid_la_task3/css/task3_style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+}
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
@@ -6,7 +11,7 @@ body {
 }
 
 .form-container {
-  width: 500px;
+  width: 600px;
   margin: auto;
   background: #fff;
   padding: 30px;
@@ -60,7 +65,8 @@ label {
 
 .form-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
