added java script file

--- a/view/mid_la_task3/view/task3_form.html
+++ b/view/mid_la_task3/view/task3_form.html
@@ -53,11 +53,11 @@
       <label><input id="checkbox1" type="checkbox"> I am interested in giving on a regular basis.</label>
 
       <h3 class="section-subtitle">Additional Information</h3>
-
+      <div id="checkbox2">
       <label><input id="checkbox2" type="checkbox"> I would like my gift to remain anonymous.</label>
       <label><input id="checkbox3" type="checkbox"> My employer offers a matching gift program.</label>
       <label><input id="checkbox4" type="checkbox"> Please don’t send a thank you letter.</label>
-      
+      </div>
       <label for="comment">Comment</label>
       <textarea id="textarea"></textarea>
 
